# Eltafawook-System

./: .dockerignore  .gitignore  Dockerfile  LICENCE  Makefile  PyWhatKit_DB.txt  README.md  Usernames and Passwords.txt  add_missing_schools.py  alembic.ini  backup_db.sh  docker-compose.prod.yml  docker-compose.yml  final_migration.sql  package-lock.json  package.json  pyproject.toml  requirements.txt  seed_students.py
.github/workflows/: ci.yml
backend/: hash_password.py  requirements.txt  students.csv
backend/app/: main.py
backend/app/core/: config.py  exceptions.py  logging_config.py  security.py
backend/app/db/: session.py
backend/app/models/: adjustment.py  branch.py  item.py  kg_inventory_ledger.py  kg_items.py  kg_sale.py  kg_student.py  ledger.py  notify.py  op_log.py  order.py  reservation.py  revenue_adjustment.py  sale.py  school.py  student.py  teacher.py  user.py
backend/app/schemas/: adjustment.py  branch.py  common.py  inventory.py  item.py  kg_inventory.py  kg_item.py  kg_report.py  kg_sale.py  kg_student.py  order.py  pagination.py  report.py  reservation.py  revenue_adjustment.py  school.py  student.py  (+4 more)
backend/tests/: conftest.py  test_api_routes.py  test_health.py  test_inventory_service.py  test_order_service.py  test_reservation_service.py  test_transfer_service.py
eltafawook-admin/: Dockerfile  index.html  package-lock.json  package.json  vite.config.js
eltafawook-admin/src/: App.jsx  apply.jsx  i18n.js  index.css  main.jsx
infra/dev/: postgres-init.sql
scripts/: create_user.py  demo_reservation_flow.ps1  reserve_flow.ps1
(+120 files in other folders)
