[tool.poetry]
name = "eltfawook"
version = "0.1.0"
description = "Inventory & reservation system for multiple branches"
authors = ["Your Name <your@email.com>"]
readme = "README.md"
packages = [{ include = "backend" }]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
uvicorn = "^0.30.1"
psycopg = "^3.1.18"
sqlalchemy = "^2.0.31"
alembic = "^1.13.1"
python-dotenv = "^1.0.1"
pydantic = "^2.8.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
pytest-asyncio = "^0.23.7"
black = "^24.4.2"
ruff = "^0.5.6"
mypy = "^1.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
